# Markdown-Pricing

./: .gitignore  README.md  pyproject.toml
markdown_pricing/: bayesian_opt.py  data.py  forecast.py  main.ipynb  main.py  preprocess.py
markdown_pricing/data/: data_pre_processed.csv
tests/: test_markdown_pricing.py
